# dear-gui

./: Cargo.toml  Readme.md
src/: canvas.rs  event_handling.rs  lib.rs  texture.rs
src/geometry/: debug.rs  mod.rs  model.rs  nurbs.rs
src/graphics/: dyn_vertex_buffer.rs  mod.rs  primitives.rs  programs.rs
src/graphics/shaders/colored_line/: frag.glsl  geo.glsl  vert.glsl
src/graphics/shaders/colored_point/: frag.glsl  geo.glsl  vert.glsl
src/graphics/shaders/line/: geo.glsl  vert.glsl
src/graphics/shaders/line_strip/: frag.glsl  geo.glsl  vert.glsl
src/graphics/shaders/sprites/: frag.glsl  geo.glsl  vert.glsl
src/ui/: docking.rs  mod.rs
