[package]
name = "gui-framework"
version = "0.1.0"
authors = ["Robin Kock <robin@kock-hamburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.27.0"
imgui = "0.4.0"
imgui-glium-renderer = "0.4.0"
imgui-winit-support = "0.4.0"
euclid = "0.22.1"
log = "0.4.8"
